--- a/css/task5.css
+++ b/css/task5.css
@@ -4,20 +4,22 @@
 
 body{
     background: black;
-    padding: 20px;
-    height: 100vh;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   min-height: 100vh;
 }
 .gallery{
     width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-columns: 9fr 1fr;
+    height: 100vh;
+    margin: 0 auto;
+    padding: 20px;
+    display: flex;
     gap: 20px;
 }
 
 .gallery img{
     width: 100%;
-    height: 100%;
     object-fit: cover;
 }
 
@@ -25,6 +27,7 @@ body{
     display: flex;
     flex-direction: column;
     gap: 20px;
+    max-width: 200px;
 
 }
 
