--- a/css/task5.css
+++ b/css/task5.css
@@ -1,42 +1,45 @@
 *{
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
     box-sizing: border-box;
 }
 
-body{
-    background: black;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   min-height: 100vh;
-}
-.gallery{
-    width: 100%;
-    height: 100vh;
-    margin: 0 auto;
-    padding: 20px;
-    display: flex;
-    gap: 20px;
-}
-
-.gallery img{
-    width: 100%;
-    object-fit: cover;
-}
-
-.images{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    max-width: 200px;
-
-}
-
-.images img{
-    opacity: 0.3;
-    transition: 0.5s;
+button{
+    padding: 10px 20px;
+    margin: 20px;
+    background: orangered;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
     cursor: pointer;
 }
 
-.images img:hover{
-    opacity: 1;
+#burger-menu{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    padding: 100px;
+    gap: 30px;
+    background: white;
+    height: 100%;
+    box-shadow: 0px 0px 10px black;
+    transition: 1s;
+}
+
+
+
+#burger-menu a{
+    color:orangered;
+    text-decoration: none;
+}
+
+#burger-menu-close{
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
