--- a/css/task6.css
+++ b/css/task6.css
@@ -3,7 +3,6 @@
 }
 
 body{
-    background: black;
    display: flex;
    align-items: center;
    justify-content: center;
@@ -13,30 +12,33 @@ body{
     width: 100%;
     height: 100vh;
     margin: 0 auto;
-    padding: 20px;
+    padding: 50px;
+    background: black;
+    box-shadow: 0px 0px 30px black;
     display: flex;
     gap: 20px;
 }
 
-.gallery img{
+.gallery-big-image{
     width: 100%;
     object-fit: cover;
 }
 
-.images{
+.gallery-images{
     display: flex;
-    flex-direction: column;
     gap: 20px;
+    flex-direction: column;
     max-width: 200px;
 
 }
 
-.images img{
+.gallery-image{
     opacity: 0.3;
+    object-fit: cover;
     transition: 0.5s;
     cursor: pointer;
 }
 
-.images img:hover{
+.gallery-image:hover{
     opacity: 1;
 }
